# KnowledgeBasedIntelligentSystem

./: .gitignore  CMakeLists.txt  Project3  README.md  main.cpp
include/clasp/: config.h
inputs/: attributes.txt
linux-build-debug/: .gitignore  CMakeCache.txt  cmake_install.cmake  compile_commands.json
src/: compile_commands.json  main.cpp
